--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "csvtojson": "^2.0.10",
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.4",
+    "expo-file-system": "^14.1.0",
     "expo-font": "~10.2.1",
     "expo-linking": "~3.2.2",
     "expo-splash-screen": "~0.16.2",
@@ -36,6 +38,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-fs": "^2.20.0",
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
